# ZzkMind

./: .gitignore  README.md  config.py  eval.py  experience.md  generate.py  gitignore  main copy.py  main.py  pyproject.toml  train.py  train_pretrain.py
configs/: tiny.yaml
dataset/: loader.py  text_dataset.py  tokenizer.py  train.txt  val.txt
model/: ZzkModel.py
torch_methods/: is_cuda_avaliable.py
